--- a/Interfaces/Base.lproj/ActivityViewer.xib
+++ b/Interfaces/Base.lproj/ActivityViewer.xib
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="ActivityViewer">
+        <customObject id="-2" userLabel="File's Owner" customClass="ActivityPanelController">
             <connections>
                 <outlet property="activityDetail" destination="35" id="37"/>
                 <outlet property="activityTable" destination="17" id="22"/>
