--- a/Interfaces/BrowserPane.xib
+++ b/Interfaces/BrowserPane.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="16C68" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
-        <plugIn identifier="com.apple.WebKitIBPlugin" version="11762"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="12120"/>
+        <plugIn identifier="com.apple.WebKitIBPlugin" version="12120"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,7 +21,7 @@
                 <view translatesAutoresizingMaskIntoConstraints="NO" id="Bbc-ej-ccq">
                     <rect key="frame" x="0.0" y="0.0" width="833" height="575"/>
                     <subviews>
-                        <customView verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jfz-EV-1Re" customClass="GradientView">
+                        <customView verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jfz-EV-1Re" customClass="GradientView" customModule="Vienna" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="546" width="833" height="29"/>
                             <subviews>
                                 <button translatesAutoresizingMaskIntoConstraints="NO" id="RJc-eu-7Rd" customClass="BrowserPaneButton">
@@ -56,7 +56,7 @@
                                         <action selector="handleReload:" target="5" id="DSD-me-maG"/>
                                     </connections>
                                 </button>
-                                <textField focusRingType="none" verticalHuggingPriority="750" preferredMaxLayoutWidth="689" translatesAutoresizingMaskIntoConstraints="NO" id="jbw-0o-tHL" customClass="SSTextField">
+                                <textField focusRingType="none" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="YES" preferredMaxLayoutWidth="689" translatesAutoresizingMaskIntoConstraints="NO" id="jbw-0o-tHL" customClass="SSTextField">
                                     <rect key="frame" x="93" y="3" width="701" height="22"/>
                                     <constraints>
                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="22" id="eVn-xM-i6p"/>
@@ -122,6 +122,17 @@
                                 <constraint firstAttribute="trailing" secondItem="Uij-h1-YdD" secondAttribute="trailing" id="vRx-RB-zuw"/>
                                 <constraint firstItem="4dH-y6-1w2" firstAttribute="leading" secondItem="RJc-eu-7Rd" secondAttribute="trailing" id="yHt-7h-1Pv"/>
                             </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="color" keyPath="startingColor">
+                                    <color key="value" red="0.98431372549999996" green="0.98431372549999996" blue="0.98431372549999996" alpha="1" colorSpace="calibratedRGB"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="endingColor">
+                                    <color key="value" red="0.60392156860000001" green="0.60392156860000001" blue="0.60392156860000001" alpha="1" colorSpace="calibratedRGB"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="angle">
+                                    <real key="value" value="270"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </customView>
                         <webView translatesAutoresizingMaskIntoConstraints="NO" id="5Jt-eD-fKX" customClass="TabbedWebView">
                             <rect key="frame" x="0.0" y="0.0" width="833" height="546"/>
