--- a/Vienna/Interfaces/Base.lproj/Preferences.storyboard
+++ b/Vienna/Interfaces/Base.lproj/Preferences.storyboard
@@ -36,7 +36,7 @@
                     <tabViewItems>
                         <tabViewItem identifier="general" image="gearshape" catalog="system" id="GJ3-1q-004" userLabel="General" customClass="PreferenceTabViewItem" customModule="Vienna" customModuleProvider="target"/>
                         <tabViewItem image="paintbrush" catalog="system" id="WK4-g4-vJd" userLabel="Appearance"/>
-                        <tabViewItem image="arrow.triangle.2.circlepath" catalog="system" id="zkN-he-3BT" userLabel="Syncing"/>
+                        <tabViewItem identifier="syncing" image="arrow.trianglehead.2.counterclockwise" catalog="system" id="zkN-he-3BT" userLabel="Syncing" customClass="PreferenceTabViewItem" customModule="Vienna" customModuleProvider="target"/>
                         <tabViewItem identifier="updates" image="square.and.arrow.down" catalog="system" id="qyx-3u-1Io" userLabel="Updates" customClass="PreferenceTabViewItem" customModule="Vienna" customModuleProvider="target"/>
                         <tabViewItem identifier="advanced" image="wrench.and.screwdriver" catalog="system" id="iEw-AM-tMF" userLabel="Advanced" customClass="PreferenceTabViewItem" customModule="Vienna" customModuleProvider="target"/>
                     </tabViewItems>
@@ -1045,7 +1045,7 @@
     </scenes>
     <resources>
         <image name="NSFollowLinkFreestandingTemplate" width="20" height="20"/>
-        <image name="arrow.triangle.2.circlepath" catalog="system" width="18" height="15"/>
+        <image name="arrow.trianglehead.2.counterclockwise" catalog="system" width="15" height="18"/>
         <image name="gearshape" catalog="system" width="16" height="16"/>
         <image name="paintbrush" catalog="system" width="17" height="18"/>
         <image name="square.and.arrow.down" catalog="system" width="15" height="16"/>
